// Original file: src/grpc/discovery-function.proto


export interface ServerlessFunctionPodInfoMapValueItem {
  'podName'?: (string);
  'nodeName'?: (string);
  'nodeIp'?: (string);
}

export interface ServerlessFunctionPodInfoMapValueItem__Output {
  'podName': (string);
  'nodeName': (string);
  'nodeIp': (string);
}
